Bug 1636615: Work around Apple VT decoder saying it dropped a frame, and then decoding that frame anyway. r=jya

We do this by keeping the unexpected frame in mReorderQueue, and outputting it later when the caller is expecting frames.

Differential Revision: https://phabricator.services.mozilla.com/D75116